# mastodon-meter

./: .flake8  .pre-commit-config.yaml  pyproject.toml
docs/: README.md  README_EN.md
src/: _logging.py  app.py  dependencies.py
src/mastodon_meter/: Account.py  Gatherer.py  Metering.py  Plotting.py  Reporter.py  Singleton.py  Types.py  database.py  models.py
