[tool.poetry]
name = "mastodon-meter"
version = "0.1.0"
description = "Backend for the Mastodon meter - a simple Mastodon stats and analytics tool"
authors = ["arseniiarsenii <arseniivelichko2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.5.3"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
pymongo = "^3.12.0"
httpx = "^0.19.0"
dnspython = "^2.1.0"
motor = "^2.5.1"
matplotlib = "^3.4.3"
aiofiles = "^0.7.0"
Pillow = "^8.3.1"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.7b0"
flake8 = "^3.9.2"
pre-commit = "^2.14.1"
vulture = "^2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = "test*"
strict = true
ignore_missing_imports  = true

[tool.black]
line-length = 120
